# eval-drift-lab-pilot

./: .gitignore  PROJECT_BRIEF.md  README.md  pyproject.toml
.github/workflows/: test.yml
eval_drift/: __init__.py  __main__.py  cli.py  drift.py  parser.py
examples/: detect_renamed_metrics.py
tests/: test_cli.py  test_drift.py  test_examples.py  test_parser.py
tests/fixtures/: baseline.json  candidate_drifted.json  candidate_ok.json  candidate_renamed_metric.json
