[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eval-drift"
version = "0.1.0"
description = "CLI toolkit that compares model-evaluation runs and flags metric drift with JSON fixtures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
eval-drift = "eval_drift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_drift*"]
